Updated swagger docs and removed header comments from code to have a single source of truth
